k8s/istio/istio-canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: reviews-gateway-external-split
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-route
spec:
  hosts:
  - "*"
  gateways:
  - reviews-gateway-external-split
  http:
  - name: "reviews-split-routes"
    route:
    - destination:
        host: reviews
        port:
          number: 9080
        subset: v2
      weight: 10
    - destination:
        host: reviews
        port:
          number: 9080
        subset: v1
      weight: 90
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews-destination
spec:
  host: reviews
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
